fix: correct gap in the nav

--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -105,7 +105,7 @@ header .container {
   display: flex;
   text-transform: uppercase;
   padding-left: 0;
-  gap: 8px;
+  gap: 6px;
 }
 
 .menu a {
